buffer: Protect against failing to map input memory when merging memories

https://bugzilla.gnome.org/show_bug.cgi?id=762239